re #663 - Fixed spacing between quicklinks on mobile

--- a/application/site/public/theme/mobile/css/organisms/_containers.scss
+++ b/application/site/public/theme/mobile/css/organisms/_containers.scss
@@ -57,11 +57,16 @@
 .container__footer {
   padding-left: 20px;
   padding-right: 20px;
-  padding-bottom: $grid-padding;
   padding-top: $gutter-width / 2;
   background-color: $wellBackground;
   border-top: 1px solid darken($grayLighter, 7%);
   border-bottom: 1px solid darken($grayLighter, 7%);
+
+  .container__quicklinks {
+    div {
+      margin-bottom: $grid-padding;
+    }
+  }
 
     .button {
         float: right;
